# GameEngine

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  pom.xml
ThirdLibrary/freetype/: CMakeLists.txt
ThirdLibrary/freetype/builds/unix/: ftsystem.c
ThirdLibrary/glad/: CMakeLists.txt  glad.c  glad.h
ThirdLibrary/libnoise/lib/: libnoise.dylib  noise.lib
ThirdLibrary/spdlog/include/spdlog/: tweakme.h
data/model/2_bedroom_house/: license.txt  scene.gltf
data/shader/: base.frag  base.vert  font.frag  font.vert  terrain.frag  terrain.vert
src/: main.cpp  main.rs
src/Engine/: Camera.hpp  Debug.hpp  Font.hpp  GameEngine.hpp  IGameLogic.hpp  Renderer.hpp  Window.h  Window.hpp
src/Engine/Common/: Text.hpp
src/Engine/Graph/: Mesh.hpp  ShaderProgram.hpp  Terrian.hpp  Texture.hpp
src/Engine/Utils/: Logger.hpp  Random.hpp  ResourceLoader.hpp
src/Game/: DummyGame.hpp
src/Procedurus/Source/: Procedurus.cbp  Procedurus.depend  Procedurus.layout  ProcedurusMain.cpp
src/Procedurus/Source/Application/: Application.h  Camera.h  FpsCounter.h  TextTool.cpp  TextTool.h
src/Procedurus/Source/Geometry/: AstronomicalObject.cpp  AstronomicalObject.h  Atmosphere.cpp  Atmosphere.h  CloudLayer.cpp  CloudLayer.h  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  Particle2D.cpp  Particle2D.h  Planet.cpp  Planet.h  PlanetRing.cpp  PlanetRing.h  SimpleCircle.cpp  SimpleCircle.h  SimpleCylinder.cpp  SimpleCylinder.h  SimpleDisk.cpp  SimpleDisk.h  SimpleSphere.cpp  SimpleSphere.h  Skybox.cpp  Skybox.h  Star.cpp  Star.h  Starfield.cpp  Starfield.h
src/Procedurus/Source/Geometry/QuadtreeTerrain/: QuadtreeTerrain.cpp  QuadtreeTerrain.h  QuadtreeTerrainFace.h  (+11 more)
src/Procedurus/Source/Math/: PerlinNoise.h  Randomizer.cpp  Randomizer.h  VectorMath.h
src/Procedurus/Source/Shaders/: ShaderManager.cpp  ShaderManager.h
src/engine/: Font.hpp  audio.rs  camera.rs  core.rs  device.rs  font.rs  logic.rs  math.rs  mod.rs  recoder.rs  renderer.rs  resource.rs  window.rs
src/engine/Common/: Text.hpp
src/engine/Graph/: Mesh.hpp
src/engine/graph/: Texture.hpp  light.rs  material.rs  mesh.rs  mod.rs  model.rs  shader.rs  texture.rs
src/engine/gui/: elements.rs
src/game/: DummyGame.hpp  dummy_game.rs  mod.rs  model_game.rs
src/main/resources/: fragment.frag  vertex.vert
src/main/resources/shaders/: fragment.frag  hud_vertex.vert  scene_fragment.frag  vertex.vert
(+66 files in other folders)
